test/errors/useImportUnknownMod.compopts
--detailed-errors # useImportUnknownMod-detailed.good
--no-detailed-errors # useImportUnknownMod-brief.good
